--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="badge">55</span>
       </div>
       <div class="circle-icon profile-wrapper">
-        <img src="/pics/profilepic_sompong.jpeg">
+        <img src="./pics/profilepic_sompong.jpeg">
         <i class="fa-solid fa-circle-chevron-down"></i>
       </div>
     </div>
